tests/baselines/reference/project/nodeModulesMaxDepthIncreased/amd/nodeModulesMaxDepthIncreased.errors.txt
maxDepthIncreased/root.ts(7,1): error TS2322: Type 'string' is not assignable to type 'number'.
maxDepthIncreased/root.ts(8,13): error TS2339: Property 'test' does not exist on type 'typeof "C:/src/TypeScript/tests/cases/projects/NodeModulesSearch/maxDepthIncreased/node_modules/@...'.


==== index.js (0 errors) ====
    exports.person = {
        "name": "John Doe",
        "age": 42
    }
    
==== entry.js (0 errors) ====
    var m3 = require("m3");
    
    module.exports = {
    	"a": 42,
    	"b": "hello, world",
    	"person": m3.person
    };
    
==== index.js (0 errors) ====
    var m2 = require('m2');
    
    /**
     * @param {string} p1 The first param
     */
    exports.f1 = function(p1) {
    	return 42;
    };
    
    exports.f2 = m2;
    
==== entry.d.ts (0 errors) ====
    export declare var foo: number;
    
==== maxDepthIncreased/root.ts (2 errors) ====
    import * as m1 from "m1";
    import * as m4 from "m4";
    
    m1.f1("test");
    m1.f2.a = 10;
    
    m1.f2.person.age = "10";    // Should error if loaded the .js files correctly
    ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    let r1 = m4.test.charAt(2); // Should error if correctly not using the .js file but using @types info
                ~~~~
!!! error TS2339: Property 'test' does not exist on type 'typeof "C:/src/TypeScript/tests/cases/projects/NodeModulesSearch/maxDepthIncreased/node_modules/@...'.
    
    let r2 = 3 + m4.foo; // Should be OK if correctly using the @types .d.ts file
    